@@ -966,6 +966,7 @@ also be available:
 \member{st_blocks} (number of blocks allocated for file),
 \member{st_blksize} (filesystem blocksize),
 \member{st_rdev} (type of device if an inode device).
+\member{st_flags} (user defined flags for file).
 
 On Mac OS systems, the following attributes may also be available:
 \member{st_rsize},
